Added health check
